--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,11 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
+tipue_search:
+  include:
+    pages: true
+    collections: []
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
