Add guide and source path to button

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ tipue_search:
   include:
     pages: true
     collections: []
+    exclude:
+      files: [search.html]
 
 
 # Exclude from processing.
